Refactoring and add xdebug on container

--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,9 @@
       "psr-4": {
         "Test\\": "tests/"
       }
+    },
+    "scripts": {
+      "coverage" : "vendor/bin/phpunit --coverage-html coverage",
+      "test" : "vendor/bin/phpunit"
     }
 }
